# metagraphed

./: .gittensory.yml  .release-please-manifest.json  CHANGELOG.md  README.md  package-lock.json  package.json  release-notes.md  server.json  wrangler.data.jsonc  wrangler.jsonc
docs/: api-stability.md  backend-artifact-contracts.md  beta-roadmap.md  cloudflare-backend.md  integration-readiness.md  operations.md  submission-gate.md
migrations/: 0007_neurons.sql  0008_economics_history.sql  0018_account_events_extrinsic_index.sql  0019_extrinsic_tip_tao.sql  0020_account_events_alpha.sql
public/: agent.md  llms-full.txt
python/: CHANGELOG.md  README.md  pyproject.toml
python/src/metagraphed/: __init__.py  aio.py  async_client.py  client.py  models.py
python/tests/: test_aio.py  test_async.py  test_client.py  test_extras.py  test_models.py
schemas/: api-components.schema.json  candidate-surface.schema.json  subnet-manifest.schema.json
scripts/: assert-published-probe-health.mjs  build-artifacts.mjs  economics-floor.mjs  fetch-events.py  fetch-metagraph.mjs  generate-client.mjs  generated-overlays.mjs  index-chain.py  kv-publish-pointer.mjs  lib.mjs  probes-smoke.mjs  r2-manifest.mjs  r2-upload.mjs  refresh-economics.mjs  scan-public-safety.mjs  smoke-live-api.mjs  stream-events.py  test_fetch_events.py  test_index_chain.py  validate-api.mjs  validate-client-sdk-sync.mjs  validate-docs.mjs  validate-mcp.mjs  validate-schemas.mjs  validate.mjs  verify-candidates.mjs
src/: account-events.mjs  ai-search.mjs  artifact-storage.mjs  badge.mjs  contracts.mjs  (+16 more)
(+145 files in other folders)
