[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metagraphed"
version = "0.2.0"
description = "Thin Python client for metagraphed — the operational + integration registry for Bittensor subnets (api.metagraph.sh)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "JSONbored" }]
keywords = ["bittensor", "metagraph", "subnet", "registry", "api-client"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.optional-dependencies]
# The sync client + typed models are stdlib-only; the async client needs httpx.
async = ["httpx>=0.27"]

[project.urls]
Homepage = "https://metagraph.sh"
Repository = "https://github.com/JSONbored/metagraphed"

[tool.hatch.build.targets.wheel]
packages = ["src/metagraphed"]
